After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669976 - Close Print Preview should show previous error info bars
Close Print Preview should show previous error info bars
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: printing
3.11.x
Other Linux
: Normal minor
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-13 10:00 UTC by Vadim Rutkovsky
Modified: 2015-06-10 18:40 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Vadim Rutkovsky 2012-02-13 10:00:59 UTC
Original report: https://bugs.launchpad.net/ubuntu/+source/gedit/+bug/929554

TEST CASE:
1) Open any file with incorrect encoding (e.g. any binary file)
Result: 'There was a problem opening..' toolbar appears
2) Select 'File - Print Preview'
3) Close print preview

Result: 'There was a problem opening..' toolbar is hidden
Expected: gedit is returned to the initial state - the toolbar with encoding selection is displayed

DistroRelease: Ubuntu 12.04
Package: gedit 3.3.3-0ubuntu1
Comment 1 Sébastien Wilmet 2013-11-09 19:58:40 UTC
I confirm this bug.
Comment 2 Paolo Borelli 2014-04-13 21:40:27 UTC
the bug is that print/print preview should not be sensitive when such error is displayed
Comment 3 Paolo Borelli 2014-07-20 20:22:28 UTC
after investigating a bit this is due to the fact that the conversion error does not set the tab in an error state.

If we set it to an error state on the other hand the textview is not shown... we need to see if this can be fixed or we need to add a new state for the conversion error