tab: set error state on encoding conversion error

So the printing is insensitive.

https://bugzilla.gnome.org/show_bug.cgi?id=669976